syntax = "proto3";
package user_proto;

import "common.proto";

message login_req
{
    bytes  phone            = 1;
    uint32 type             = 2;//登录类型，1:密码登录,2:验证码登录
    bytes  verify_info      = 3;//1密码,2验证码
}

message login_rsp
{
    errorinfo errinfo   = 1; // 错误码信息
    uint32 id           = 2;
    bytes token         = 3; // 访问令牌
}

message zone_get_req
{
}

message zone_get_rsp
{
    errorinfo errinfo       = 1; // 错误码信息
    repeated zone list      = 2;
}

message zone
{
    bytes country   = 1;
    bytes zone      = 2;
}
